# siplus-cli

./: .gitmodules  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/cpptrace/: CMakeLists.txt
src/: main.cpp
